--- a/Milestone_Music_Recommendation_System_Full_Code.ipynb
+++ b/Milestone_Music_Recommendation_System_Full_Code.ipynb
@@ -4435,7 +4435,15 @@
         "\n",
         "actual_k = 30 suggests the model used 30 neighbors — possibly KNN-based collaborative filtering — and had enough data for a robust prediction.\n",
         "\n",
-        "was_impossible = False confirms there were no cold-start issues or missing data for this prediction."
+        "was_impossible = False confirms there were no cold-start issues or missing data for this prediction.\n",
+        "\n",
+        "Insights:\n",
+        "\n",
+        "The model successfully captured the user’s low interest in the item, indicating a good understanding of their preferences.\n",
+        "\n",
+        "Given that this prediction wasn't impossible and used a full set of neighbors, it suggests the model has good coverage and is functioning reliably for users/items with enough data.\n",
+        "\n",
+        "The Low error indicated by rmse score contributes to improving overall accuracy metrics."
       ]
     },
     {
