--- a/Milestone_Music_Recommendation_System_Full_Code.ipynb
+++ b/Milestone_Music_Recommendation_System_Full_Code.ipynb
@@ -5033,12 +5033,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "W5RMcdzjTsns",
-        "scrolled": false
+        "scrolled": false,
+        "outputId": "bc0d5755-a34f-48cf-c5b6-d70ee32d8883"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RMSE: 0.9116\n",
+            "Precision:  0.387\n",
+            "Recall:  0.601\n",
+            "F_1 score:  0.471\n"
+          ]
+        }
+      ],
       "source": [
         "# Apply the item-item similarity collaborative filtering model with random_state = 1 and evaluate the model performance\n",
         "\n",
@@ -5064,16 +5079,37 @@
         "id": "JfdIJ6XWunx0"
       },
       "source": [
-        "**Observations and Insights:______________**"
+        "**Observations and Insights:______________**\n",
+        "\n",
+        "Recall is strong — the model is able to identify most relevant songs for users.\n",
+        "\n",
+        "RMSE is under 1.0, which indicates predictions are generally close to the actual ratings.\n",
+        "\n",
+        "Precision is relatively low — users might be getting too many irrelevant recommendations.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
-        "id": "5yILOxXRTsns"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5yILOxXRTsns",
+        "outputId": "4d2092e2-22ad-4e67-d7e2-f29bdcef55d0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid=6958, iid=1671, r_ui=None, est=1.3159172111835236, details={'actual_k': 39, 'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ],
       "source": [
         "# Predicting play count for a sample user_id 6958 and song (with song_id 1671) listened to by the user\n",
         "sim_item_item.predict(uid=6958, iid=1671)\n"
@@ -5081,11 +5117,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
-        "id": "jSn8oK3JZsTc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jSn8oK3JZsTc",
+        "outputId": "6825ecc1-faa5-4b76-dbd2-11f9513ea7da"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid=6958, iid=3232, r_ui=None, est=1.3441366682034444, details={'actual_k': 39, 'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ],
       "source": [
         "# Predict the play count for a user that has not listened to the song (with song_id 1671)\n",
         "sim_item_item.predict(uid=6958, iid=3232)"
@@ -5097,8 +5148,21 @@
         "id": "dxE9fJ8Dupby"
       },
       "source": [
-        "**Observations and Insights:______________**"
+        "**Observations and Insights:______________**\n",
+        "\n",
+        "Even with 39 references, the score remains low — reinforcing that the model sees limited relevance or similarity between this song and the user’s preferences.\n",
+        "\n",
+        "The estimated value 1.32 is relatively low, especially if your rating or play count scale goes higher (e.g., 1–5, or higher integers).\n",
+        "\n",
+        "This suggests that the user is unlikely to be highly interested in song 1671."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "zcoW5aSrLLXR"
+      }
     },
     {
       "cell_type": "code",
