--- a/Milestone_Music_Recommendation_System_Full_Code.ipynb
+++ b/Milestone_Music_Recommendation_System_Full_Code.ipynb
@@ -6455,13 +6455,13 @@
         "\n",
         "RMSE\n",
         "1.0180\n",
-        "1.0027 ✅ (lower is better)\n",
+        "1.0027 (lower is better)\n",
         "\n",
         "Parameter\n",
         "\n",
-        "n_epochs\t(10)\t  (30) ✅ (more training)\n",
+        "n_epochs\t(10)\t  (30) (more training provided better result)\n",
         "\n",
-        "lr_all\t  (0.005)\t(0.01) ✅ (faster learning)"
+        "lr_all\t  (0.005)\t(0.01) (faster learning)"
       ]
     },
     {
