--- a/Milestone_Music_Recommendation_System_Full_Code.ipynb
+++ b/Milestone_Music_Recommendation_System_Full_Code.ipynb
@@ -7691,75 +7691,257 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 138,
       "metadata": {
-        "id": "UX826CsjR-F3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UX826CsjR-F3",
+        "outputId": "c1d912ab-baf2-48d2-d591-9d9ec4ba7fb1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "         user_id  song_id  play_count                            title  \\\n",
+            "209         6958      447           1               Daisy And Prudence   \n",
+            "211         6958      512           1  The Ballad of Michael Valentine   \n",
+            "212         6958      549           1        I Stand Corrected (Album)   \n",
+            "213         6958      703           1            They Might Follow You   \n",
+            "214         6958      719           1                       Monkey Man   \n",
+            "...          ...      ...         ...                              ...   \n",
+            "2086668    47786     9139           1                 Half Of My Heart   \n",
+            "2086670    47786     9186           1            Bitter Sweet Symphony   \n",
+            "2086679    47786     9351           2       The Police And The Private   \n",
+            "2086689    47786     9543           1                     Just Friends   \n",
+            "2086699    47786     9847           1             He Can Only Hold Her   \n",
+            "\n",
+            "                       release      artist_name  year  \\\n",
+            "209               Distillation     Erin McKeown  2000   \n",
+            "211                    Sawdust      The Killers  2004   \n",
+            "212            Vampire Weekend  Vampire Weekend  2007   \n",
+            "213                Tiny Vipers      Tiny Vipers  2007   \n",
+            "214       You Know I'm No Good    Amy Winehouse  2007   \n",
+            "...                        ...              ...   ...   \n",
+            "2086668         Battle Studies       John Mayer     0   \n",
+            "2086670  Bitter Sweet Symphony        The Verve  1997   \n",
+            "2086679            Live It Out           Metric  2005   \n",
+            "2086689          Back To Black    Amy Winehouse  2006   \n",
+            "2086699          Back To Black    Amy Winehouse  2006   \n",
+            "\n",
+            "                                                      text  \n",
+            "209           Daisy And Prudence Distillation Erin McKeown  \n",
+            "211      The Ballad of Michael Valentine Sawdust The Ki...  \n",
+            "212      I Stand Corrected (Album) Vampire Weekend Vamp...  \n",
+            "213          They Might Follow You Tiny Vipers Tiny Vipers  \n",
+            "214          Monkey Man You Know I'm No Good Amy Winehouse  \n",
+            "...                                                    ...  \n",
+            "2086668         Half Of My Heart Battle Studies John Mayer  \n",
+            "2086670  Bitter Sweet Symphony Bitter Sweet Symphony Th...  \n",
+            "2086679      The Police And The Private Live It Out Metric  \n",
+            "2086689           Just Friends Back To Black Amy Winehouse  \n",
+            "2086699   He Can Only Hold Her Back To Black Amy Winehouse  \n",
+            "\n",
+            "[138301 rows x 8 columns]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Concatenate the \"title\", \"release\", \"artist_name\" columns to create a different column named \"text\""
+        "df_content = df_final\n",
+        "\n",
+        "# Concatenate the 'title', 'release', and 'artist_name' columns to create a new column 'text'\n",
+        "df_content['text'] = df_content['title'] + ' ' + df_content['release'] + ' ' + df_content['artist_name']\n",
+        "\n",
+        "# Display the DataFrame with the new 'text' column\n",
+        "print(df_content)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 139,
       "metadata": {
-        "id": "WdXw4U-wR-F4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WdXw4U-wR-F4",
+        "outputId": "b7c71dae-06ac-43ce-c84e-99cad1755be3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                 user_id  song_id  play_count  \\\n",
+            "title                                                           \n",
+            "Daisy And Prudence                  6958      447           1   \n",
+            "The Ballad of Michael Valentine     6958      512           1   \n",
+            "I Stand Corrected (Album)           6958      549           1   \n",
+            "They Might Follow You               6958      703           1   \n",
+            "Monkey Man                          6958      719           1   \n",
+            "\n",
+            "                                                                              text  \n",
+            "title                                                                               \n",
+            "Daisy And Prudence                    Daisy And Prudence Distillation Erin McKeown  \n",
+            "The Ballad of Michael Valentine  The Ballad of Michael Valentine Sawdust The Ki...  \n",
+            "I Stand Corrected (Album)        I Stand Corrected (Album) Vampire Weekend Vamp...  \n",
+            "They Might Follow You                They Might Follow You Tiny Vipers Tiny Vipers  \n",
+            "Monkey Man                           Monkey Man You Know I'm No Good Amy Winehouse  \n"
+          ]
+        }
+      ],
       "source": [
         "# Select the columns 'user_id', 'song_id', 'play_count', 'title', 'text' from df_small data\n",
+        "df_small = df_content[['user_id', 'song_id', 'play_count', 'title', 'text']]\n",
         "\n",
         "# Drop the duplicates from the title column\n",
+        "df_small = df_small.drop_duplicates(subset=['title'])\n",
         "\n",
         "# Set the title column as the index\n",
+        "df_small = df_small.set_index('title')\n",
         "\n",
-        "# See the first 5 records of the df_small dataset\n"
+        "# See the first 5 records of the df_small dataset\n",
+        "print(df_small.head())\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 140,
       "metadata": {
-        "id": "qDcYHwZTR-F5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        },
+        "id": "qDcYHwZTR-F5",
+        "outputId": "c37bf86d-2747-431c-c28a-b20afb53a4d1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0                 Daisy And Prudence\n",
+              "1    The Ballad of Michael Valentine\n",
+              "2          I Stand Corrected (Album)\n",
+              "3              They Might Follow You\n",
+              "4                         Monkey Man\n",
+              "Name: title, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Daisy And Prudence</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>The Ballad of Michael Valentine</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>I Stand Corrected (Album)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>They Might Follow You</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Monkey Man</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ],
       "source": [
-        "# Create the series of indices from the data\n"
+        "# Create the series of indices from the data\n",
+        "indices = pd.Series(df_small.index)\n",
+        "\n",
+        "indices[:5]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 144,
       "metadata": {
-        "id": "9UINF3Nwvwfr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9UINF3Nwvwfr",
+        "outputId": "f7599b3a-2d5d-4385-89f3-360de04d5fc7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+          ]
+        }
+      ],
       "source": [
         "# Importing necessary packages to work with text data\n",
         "import nltk\n",
         "\n",
         "# Download punkt library\n",
-        "\n",
+        "nltk.download('punkt')\n",
         "\n",
         "# Download stopwords library\n",
-        "\n",
+        "nltk.download('stopwords')\n",
         "\n",
         "# Download wordnet\n",
+        "nltk.download('wordnet')\n",
         "\n",
+        "# Download punkt_tab\n",
+        "nltk.download('punkt_tab') # Download the missing resource\n",
         "\n",
         "# Import regular expression\n",
+        "import re\n",
         "\n",
-        "\n",
-        "# Import word_tokenizer\n",
-        "\n",
+        "# Import word_tokenize\n",
+        "from nltk import word_tokenize\n",
         "\n",
         "# Import WordNetLemmatizer\n",
+        "from nltk.stem import WordNetLemmatizer\n",
         "\n",
         "# Import stopwords\n",
+        "from nltk.corpus import stopwords\n",
         "\n",
-        "\n",
-        "# Import CountVectorizer and TfidfVectorizer\n"
+        "# Import CountVectorizer and TfidfVectorizer\n",
+        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n"
       ]
     },
     {
@@ -7773,37 +7955,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 145,
       "metadata": {
         "id": "j5QSSeUvR-F6"
       },
       "outputs": [],
       "source": [
-        "# Create a function to tokenize the text"
+        "# Create a function to tokenize the text\n",
+        "def tokenize(text):\n",
+        "  text = re.sub(r\"[^a-zA-Z]\", \" \", text)\n",
+        "  tokens = word_tokenize(text)\n",
+        "  words = [word for word in tokens if word not in stopwords.words(\"english\")]\n",
+        "  text_lems = [WordNetLemmatizer().lemmatize(word).strip() for word in words]\n",
+        "  return text_lems"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 146,
       "metadata": {
-        "id": "RI_onIGdR-F6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RI_onIGdR-F6",
+        "outputId": "9a0c4c80-6ff2-42d6-f38d-632dcfcd5e85"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(629, 1522)\n"
+          ]
+        }
+      ],
       "source": [
         "# Create tfidf vectorizer\n",
+        "tfidf = TfidfVectorizer(tokenizer=tokenize)\n",
         "\n",
-        "# Fit_transfrom the above vectorizer on the text column and then convert the output into an array\n"
+        "# Fit_transfrom the above vectorizer on the text column and then convert the output into an array\n",
+        "tfidf_matrix = tfidf.fit_transform(df_small['text']).toarray()\n",
+        "\n",
+        "# Print the shape of the tfidf_matrix\n",
+        "print(tfidf_matrix.shape)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 147,
       "metadata": {
-        "id": "Beak6ODRR-F7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Beak6ODRR-F7",
+        "outputId": "fbd61f90-100f-4c28-c989-ed9d02ebe496"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(629, 629)\n"
+          ]
+        }
+      ],
       "source": [
-        "# Compute the cosine similarity for the tfidf above output\n"
+        "# Compute the cosine similarity for the tfidf above output\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "\n",
+        "# Compute the cosine similarity\n",
+        "cosine_sim = cosine_similarity(tfidf_matrix, tfidf_matrix)\n",
+        "\n",
+        "# Print the shape of the cosine_sim\n",
+        "print(cosine_sim.shape)\n"
       ]
     },
     {
@@ -7817,7 +8041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 148,
       "metadata": {
         "id": "upANOISkR-F8"
       },
@@ -7826,21 +8050,22 @@
         "# Function that takes in song title as input and returns the top 10 recommended songs\n",
         "def recommendations(title, similar_songs):\n",
         "\n",
+        "  recommended_songs = []\n",
         "\n",
+        "  # Getting the index of the song that matches the title\n",
+        "  idx = indices[indices == title].index[0]\n",
         "\n",
-        "    # Getting the index of the song that matches the title\n",
+        "  # Creating a Series with the similarity scores in descending order\n",
+        "  score_series = pd.Series(similar_songs[idx]).sort_values(ascending = False)\n",
         "\n",
+        "  # Getting the indexes of the 10 most similar songs\n",
+        "  top_10_indexes = list(score_series.iloc[1:11].index)\n",
         "\n",
-        "    # Creating a Series with the similarity scores in descending order\n",
+        "  # Populating the list with the titles of the best 10 matching songs\n",
+        "  for i in top_10_indexes:\n",
+        "    recommended_songs.append(list(df_small.index)[i])\n",
         "\n",
-        "\n",
-        "    # Getting the indexes of the 10 most similar songs\n",
-        "\n",
-        "\n",
-        "    # Populating the list with the titles of the best 10 matching songs\n",
-        "\n",
-        "\n",
-        "    return"
+        "  return recommended_songs"
       ]
     },
     {
@@ -7854,13 +8079,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 149,
       "metadata": {
-        "id": "ohEK5dkVR-F8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ohEK5dkVR-F8",
+        "outputId": "07b4f8fe-379d-4da3-e79f-8c02aabff974"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Big Me',\n",
+              " 'Everlong',\n",
+              " 'The Pretender',\n",
+              " 'Nothing Better (Album)',\n",
+              " 'From Left To Right',\n",
+              " 'Lifespan Of A Fly',\n",
+              " 'Daisy And Prudence',\n",
+              " \"Ghosts 'n' Stuff (Original Instrumental Mix)\",\n",
+              " 'Closer',\n",
+              " 'No Cars Go']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ],
       "source": [
-        "# Make the recommendation for the song with title 'Learn To Fly'\n"
+        "# Make the recommendation for the song with title 'Learn To Fly'\n",
+        "recommendations('Learn To Fly', cosine_sim)\n"
       ]
     },
     {
@@ -7869,7 +8119,16 @@
         "id": "UQ7iI5QJ0oem"
       },
       "source": [
-        "**Observations and Insights:_________**"
+        "**Observations and Insights:_________**\n",
+        "\n",
+        "Songs like \"Big Me,\" \"Everlong,\" and \"The Pretender\" are also by Foo Fighters, the same band that released \"Learn To Fly\".\n",
+        "\n",
+        "This shows that the system is effectively capturing artist similarity, which is often a strong indicator in music preferences.\n",
+        "\n",
+        "It’s likely the TF-IDF vectorizer picked up on shared keywords such as fly or learn.\n",
+        "\n",
+        "Effectiveness of Content-Based Filtering:\n",
+        "The system successfully recommends tracks that are likely similar in terms of lyrics, artist, genre, or album metadata, which is the essence of content-based filtering.\n"
       ]
     },
     {
