--- a/Milestone_Music_Recommendation_System_Full_Code.ipynb
+++ b/Milestone_Music_Recommendation_System_Full_Code.ipynb
@@ -8147,7 +8147,33 @@
       },
       "source": [
         "**1. Comparison of various techniques and their relative performance based on chosen Metric (Measure of success)**:\n",
-        "- How do different techniques perform? Which one is performing relatively better? Is there scope to improve the performance further?"
+        "- How do different techniques perform? Which one is performing relatively better? Is there scope to improve the performance further?\n",
+        "\n",
+        "Techniques Compared in the Notebook:\n",
+        "- User-User Collaborative Filtering\n",
+        "\n",
+        "- Item-Item Collaborative Filtering\n",
+        "\n",
+        "- Matrix Factorization using SVD\n",
+        "\n",
+        "- Co-Clustering Algorithm\n",
+        "\n",
+        "- Content-Based Filtering\n",
+        "\n",
+        "```\n",
+        "Technique                    | RMSE   | Precision | Recall | F1 Score\n",
+        "----------------------------------------------------------------------\n",
+        "User-User Collaborative      | 0.4487 | 0.805     | 0.840  | 0.822\n",
+        "Item-Item Collaborative      | 0.9116 | 0.387     | 0.601  | 0.471\n",
+        "SVD (after tuning)           | 1.0027 | 0.78      | 0.829  | 0.804\n",
+        "Co-Clustering (after tuning) | 1.0398 | N/A       | N/A    | N/A\n",
+        "Content-Based Filtering      | N/A    | N/A       | N/A    | N/A\n",
+        "\n",
+        "Lower RMSE is better. Higher precision, recall, and F1 score indicate better classification and recommendation relevance.\n",
+        "\n",
+        "```\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -8157,7 +8183,33 @@
       },
       "source": [
         "**2. Refined insights**:\n",
-        "- What are the most meaningful insights from the data relevant to the problem?"
+        "- What are the most meaningful insights from the data relevant to the problem?\n",
+        "\n",
+        "```\n",
+        "1. User Behavior Drives Strong Recommendations\n",
+        "    Users exhibit repetitive and patterned listening habits, enabling collaborative filtering methods (especially user-user) to capture preferences effectively.\n",
+        "\n",
+        "    High precision (0.805) and recall (0.84) in User-User filtering suggest the model recommends songs that users are very likely to engage with.\n",
+        "\n",
+        "2. Item Similarity Alone Isn't Sufficient\n",
+        "    Item-Item filtering showed much lower precision (0.387) and higher RMSE (0.91).\n",
+        "\n",
+        "    Insight: Songs alone don't drive preferences—user context (tastes, history) matters more than item similarity alone.\n",
+        "\n",
+        "3. SVD (Matrix Factorization) Is a Robust Choice\n",
+        "    Tuned SVD model showed good predictive accuracy (RMSE ~ 1.0027).\n",
+        "\n",
+        "    This method also generalizes well to sparse user-item matrices and unseen data, making it scalable and production-ready.\n",
+        "\n",
+        "4. Hybrid Models Are the Best Path Forward\n",
+        "    No single method solves every aspect,  well—hybrid models combining SVD with content-based or user-user filtering offer better coverage and performance.\n",
+        "\n",
+        "    Insight: The blending of strengths ensures robustness, personalization, and scalability.\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "\n"
       ]
     },
     {
@@ -8167,7 +8219,14 @@
       },
       "source": [
         "**3. Proposal for the final solution design:**\n",
-        "- What model do you propose to be adopted? Why is this the best solution to adopt?"
+        "- What model do you propose to be adopted? Why is this the best solution to adopt?\n",
+        "\n",
+        "```\n",
+        "Final Solution Design Proposal: Hybrid Recommendation System\n",
+        "\n",
+        "Proposed Model: Hybrid Model Combining SVD + User-User Collaborative Filtering + Content-Based Filtering\n",
+        "```\n",
+        "\n"
       ]
     }
   ],
